GNOME Bugzilla – Bug 770167
"View All" button in iRadio plugin doesn't fire filter changed notification
Last modified: 2016-08-20 22:10:24 UTC
Steps to reproduce: 1. Enter "++++" in GtkEntry ( Search your Internet Radio Stations ) 2. All stations ( should possibly ) disappear. 3. Click "View All" button. Text is cleared, but no radio stations are displayed.
I'm not sure if "View All" button ( in Music / Radio / Podcast ) still makes much sense. It offers very little for a button in that spot. Sometimes, it is confusing to use it with 'Browse' button ( 2 buttons offering view related functionality ). Removing the 'View All' button would add more clarity to 'Browse' button. Now that GtkSearchEntry has been available for some time, users of Gnome / GTK would well be aware of how to use the search bar, and would not be needing "View All" button anymore.
(In reply to vrishab from comment #1) > Now that GtkSearchEntry has been available for some time, users of Gnome / > GTK would well be aware of how to use the search bar, and would not be > needing "View All" button anymore. The 'view all' button clears both the browser selection and the search bar, which you cannot do with just the search bar, so this wouldn't work.
The actual bug here was that the property view wasn't selecting the 'all' row when the selection was cleared, so it didn't emit a selection-changed notification, so the iradio source didn't rerun its query. Commit 70495e6 fixes this.