property-view: select 'all' row when single mode selection is cleared

Multiple selection mode has always done this, so single selection mode
should do it too.

https://bugzilla.gnome.org/show_bug.cgi?id=770167